Relationships added to all the model classes
