# app/Http/Controllers/CategoryController.php
@@ -144,7 +144,7 @@ class CategoryController extends Controller
                 return response()->json($categories, 200);
             }
             if(in_array($key,$col)){ 
-                if(strcmp($key,'name')){
+                if($key=='name'){
                     $input[$key]= Str::ucfirst($input[$key]);
                 }
                 $categories = $categories->where($key,$input[$key]);
@@ -199,12 +199,21 @@ class CategoryController extends Controller
     public function update(Request $request, $id)
     {
         $input = $request->all();          
-        $category= Category::where('id',$id)->first();
-        if($category->fill($input)->save()){
-            return ($category)
-            ->response()
-            ->setStatusCode(Response::HTTP_CREATED);
-        } 
+        $category_to_be_updated= Category::where('id',$id)->first();
+        $category= Category::where('name',Str::ucfirst($request->name))->first();
+        if(!$category){
+            $input['name']=Str::ucfirst($input['name']);
+            if($category_to_be_updated->fill($input)->save()){
+                return (new CategoryResource($category_to_be_updated))
+                ->response()
+                ->setStatusCode(Response::HTTP_CREATED);
+            }else{ 
+                return response()
+                    ->json("This resource couldn't be saved due to internal error", Response::HTTP_INTERNAL_SERVER_ERROR);
+            }
+        }else{
+            return response()->json("A resource exist by this name.", Response::HTTP_CONFLICT); 
+        }
     }
 
     /**
