# storage/api-docs/api-docs.json
@@ -254,14 +254,14 @@
                 "tags": [
                     "Category"
                 ],
-                "summary": "Update existing project",
-                "description": "Returns updated project data",
-                "operationId": "updateProject",
+                "summary": "Update existing category",
+                "description": "Returns updated category data",
+                "operationId": "updateCategory",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "Project id",
+                        "description": "Category id",
                         "required": true,
                         "schema": {
                             "type": "integer"
@@ -273,7 +273,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/UpdateProjectRequest"
+                                "$ref": "#/components/schemas/Category"
                             }
                         }
                     }
@@ -284,7 +284,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/Project"
+                                    "$ref": "#/components/schemas/Category"
                                 }
                             }
                         }
@@ -307,7 +307,7 @@
                 "tags": [
                     "Category"
                 ],
-                "summary": "Delete existing project",
+                "summary": "Delete existing category",
                 "description": "Deletes a record and returns no content",
                 "operationId": "deleteProject",
                 "parameters": [
@@ -326,7 +326,7 @@
                         "description": "Successful operation",
                         "content": {
                             "application/json": {
-                                "schema": {}
+                                "schema":{}
                             }
                         }
                     },
